--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "lint": "npx eslint ."
   },
   "keywords": [],
-  "author": "",
+  "author": "Kseniia Tikhonova",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.44.0",
